<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">个性相册</string>
    <string name="tab_photo">照片</string>
    <string name="tab_album">相册</string>
    <string name="tab_location">地点</string>
    <string name="all_photo">所有照片</string>
    <string name="default_title">相册</string>

    <string name="tab_edit">编辑</string>
    <string name="tab_delete">删除</string>
    <string name="tab_share">分享</string>
    <string name="tab_mosaic">马赛克</string>
    <string name="tab_line_mark">划线</string>
    <string name="tab_word_mark">写字</string>
    <string name="cancel_edit_draw">撤回</string>
    <string name="save_edit_draw">保存</string>

    <string name="color_white">白色</string>
    <string name="color_black">黑色</string>
    <string name="color_red">红色</string>

    <string name="input_content">请输入内容</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>

    <string name="image_save_success">图片保存成功：%s</string>
    <string name="image_save_fail">图片保存失败</string>
</resources>