<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">

        <com.spf.album.view.DrawImageView
            android:id="@+id/img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.spf.album.view.DragTextView
            android:id="@+id/tv_save_edit"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_30"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="#2AFFFFFF"
            android:gravity="center"
            android:text="@string/save_edit_draw"
            android:textColor="@android:color/white"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.spf.album.view.DragTextView
            android:id="@+id/tv_cancel_edit"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_30"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:background="#2AFFFFFF"
            android:gravity="center"
            android:text="@string/cancel_edit_draw"
            android:textColor="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_bottom"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:background="#1AFFFFFF"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.spf.album.view.BottomBarView
                android:id="@+id/tab_line"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:img_normal="@drawable/ic_line_mark_normal"
                app:img_select="@drawable/ic_line_mark_selected"
                app:selected="false"
                app:txt_content="@string/tab_line_mark" />

            <com.spf.album.view.BottomBarView
                android:id="@+id/tab_word"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:img_normal="@drawable/ic_word_mark_normal"
                app:img_select="@drawable/ic_word_mark_selected"
                app:selected="false"
                app:txt_content="@string/tab_word_mark" />

            <com.spf.album.view.BottomBarView
                android:id="@+id/tab_mosaic"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:visibility="gone"
                app:img_normal="@drawable/ic_mosaic_normal"
                app:img_select="@drawable/ic_mosaic_selected"
                app:selected="false"
                app:txt_content="@string/tab_mosaic" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
