<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <com.spf.album.view.CustomViewPager
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:scrollEnabled="false" />

        <View
            android:id="@+id/v_divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_1"
            android:background="@drawable/bg_footer_shadow" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:orientation="horizontal"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5">

            <LinearLayout
                android:id="@+id/ll_photo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_photo"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_tab_photo_selected" />

                <TextView
                    android:id="@+id/tv_photo"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:includeFontPadding="false"
                    android:text="@string/tab_photo"
                    android:textColor="@color/tab_text_color_select"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_album"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_album"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_tab_album_normal" />

                <TextView
                    android:id="@+id/tv_album"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:includeFontPadding="false"
                    android:text="@string/tab_album"
                    android:textColor="@color/tab_text_color_normal"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_location"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_location"
                    android:layout_width="@dimen/dp_20"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_tab_location_normal" />

                <TextView
                    android:id="@+id/tv_location"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dp_20"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:includeFontPadding="false"
                    android:text="@string/tab_location"
                    android:textColor="@color/tab_text_color_normal"
                    android:textSize="@dimen/sp_12" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</layout>